--- a/index.html
+++ b/index.html
@@ -2,123 +2,180 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>PersoShift ETF‑Rechner</title>
+  <title>PersoShift ETF-Rechner</title>
+
+  <!-- Schrift & Chart.js -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <style>
     body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:760px;margin:auto;}
     h1{margin-bottom:1rem;font-size:2rem;}
-    input,select,button{font-family:'Inter',sans-serif;font-size:1rem;padding:0.4rem 0.6rem;border:1px solid #ccc;border-radius:6px;width:100%;box-sizing:border-box;}
+    input,button{font-family:inherit;font-size:1rem;padding:0.45rem 0.6rem;border:1px solid #ccc;border-radius:6px;width:100%;box-sizing:border-box;}
     label{display:block;margin:0.6rem 0;text-align:left;}
-    .row{display:flex;gap:0.5rem;}
-    .btn{background:#5146ff;color:#fff;font-weight:600;border:none;cursor:pointer;border-radius:8px;margin:0.4rem 0;}
+    .row{display:flex;gap:0.6rem;}
+    .btn{background:#5146ff;color:#fff;font-weight:600;border:none;cursor:pointer;border-radius:8px;margin:0.5rem 0;}
     .btn:hover{background:#3e37d8;}
     #advToggle{cursor:pointer;margin:1rem 0;text-decoration:underline;font-weight:600;}
     #advanced{display:none;border:1px dashed #bbb;padding:1rem;border-radius:8px;}
-    canvas{width:100% !important;height:420px !important;}
-    #warn{color:#c00;font-size:0.9rem;}
+    canvas{width:100%!important;height:480px!important;}
+    #warn{color:#c00;font-size:0.9rem;margin-top:0.3rem;}
   </style>
 </head>
 <body>
-  <h1>PersoShift ETF‑Rechner</h1>
 
-  <section style="text-align:left">
-    <label>Monatsrate (€)
-      <input id="rate" type="number" value="50" min="0">
-    </label>
-    <label>Laufzeit (Jahre)
-      <input id="years" type="number" value="15" min="1">
-    </label>
-    <label>Jahresrendite (%)
-      <input id="interest" type="number" value="7" step="0.1" min="0">
-    </label>
+<h1>PersoShift ETF-Rechner</h1>
 
-    <div id="advToggle">Erweiterte Optionen ▼</div>
-    <div id="advanced">
-      <label>Startkapital (€)
-        <input id="start" type="number" value="0" min="0">
+<section style="text-align:left">
+  <label>Monatsrate (€)
+    <input id="rate" type="number" value="50" min="0">
+  </label>
+  <label>Laufzeit (Jahre)
+    <input id="years" type="number" value="15" min="1">
+  </label>
+  <label>Jahresrendite (%)
+    <input id="interest" type="number" value="7" step="0.1" min="0">
+  </label>
+
+  <div id="advToggle">Erweiterte Optionen ▼</div>
+  <div id="advanced">
+    <label>Startkapital (€)
+      <input id="start" type="number" value="0" min="0">
+    </label>
+    <div class="row">
+      <label style="flex:1">Einmalzahlung (€)
+        <input id="lumpsum" type="number" value="0" min="0">
       </label>
-      <div class="row">
-        <label style="flex:1">Einmalzahlung (€)
-          <input id="lumpsum" type="number" value="0" min="0">
-        </label>
-        <label style="flex:1">im Jahr
-          <input id="lumpyear" type="number" value="1" min="1">
-        </label>
-      </div>
+      <label style="flex:1">im Jahr
+        <input id="lumpyear" type="number" value="1" min="1">
+      </label>
     </div>
+  </div>
 
-    <button class="btn" onclick="calc(false)">Berechnen (Brutto)</button>
-    <button class="btn" onclick="calc(true)">Berechnen (mit Steuer)</button>
-    <div id="warn"></div>
-  </section>
+  <button class="btn" onclick="calc(false)">Berechnen (Brutto)</button>
+  <button class="btn" onclick="calc(true)">Berechnen (mit Steuer)</button>
+  <div id="warn"></div>
+</section>
 
-  <h2 id="headline"></h2>
-  <canvas id="chart"></canvas>
-  <h3>Vergleich (Endkapital)</h3>
-  <canvas id="compare"></canvas>
+<h2 id="headline"></h2>
+<canvas id="chart"></canvas>
+
+<h3>Vergleich (Endkapital)</h3>
+<canvas id="compare"></canvas>
 
 <script>
-const taxRate=0.26375; // 26,375 %
+const taxRate = 0.26375;          // 26,375 %
 let chartMain, chartCompare;
 
-// Dropdown
-const adv=document.getElementById('advanced');
-const tog=document.getElementById('advToggle');
-tog.onclick=()=>{adv.style.display=adv.style.display==='none'? 'block':'none'; tog.textContent= adv.style.display==='none'? 'Erweiterte Optionen ▼':'Erweiterte Optionen ▲';};
+// Dropdown toggle
+const advBox = document.getElementById('advanced');
+const advToggle = document.getElementById('advToggle');
+advToggle.onclick = () => {
+  const open = advBox.style.display !== 'none';
+  advBox.style.display = open ? 'none' : 'block';
+  advToggle.textContent = open ? 'Erweiterte Optionen ▼' : 'Erweiterte Optionen ▲';
+};
 
-function fmt(n){return n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});}
+// Format €
+const fmt = n => n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
+
+// Elemente referenzieren
+const rateEl=rate, yearsEl=years, intEl=interest, startEl=start,
+      lumpEl=lumpsum, lumpYearEl=lumpyear, warnEl=warn;
 
 function calc(withTax){
-  const rate=parseFloat(rateElem.value||0);
-  const yrs=parseInt(yearsElem.value||0);
-  const p=parseFloat(interestElem.value||0)/100;
-  const start=parseFloat(startElem.value||0);
-  const lump=parseFloat(lumpsumElem.value||0);
-  const lumpY=parseInt(lumpyearElem.value||0);
+  const rate  = +rateEl.value || 0;
+  const yrs   = +yearsEl.value || 0;
+  const pYear = (+intEl.value || 0)/100;
+  const start = +startEl.value || 0;
+  const lump  = +lumpEl.value || 0;
+  const lumpY = +lumpYearEl.value || 0;
 
-  warn.textContent='';
-  if(yrs<1){warn.textContent='Bitte Laufzeit ≥ 1 Jahr eingeben';return;}
-  if(lump>0 && (lumpY<1||lumpY>yrs)){warn.textContent='Jahr für Einmalzahlung liegt außerhalb der Laufzeit';return;}
+  warnEl.textContent='';
+  if(yrs < 1){warnEl.textContent='Bitte Laufzeit ≥ 1 Jahr eingeben';return;}
+  if(lump>0 && (lumpY<1 || lumpY>yrs)){
+    warnEl.textContent='Jahr für Einmalzahlung liegt außerhalb der Laufzeit';
+    return;
+  }
 
-  const mRate=p/12, months=yrs*12;
-  let value=start; let paid=start;
-  const labels=[], dep=[], netGain=[], taxArr=[];
-  for(let y=1;y<=yrs;y++){
-    for(let m=0;m<12;m++){value=value*(1+mRate)+rate;}
-    paid+=rate*12;
-    if(y===lumpY){value+=lump; paid+=lump;}
-    const gross=value-paid;
-    const tax=withTax?gross*taxRate:0;
-    const net=gross-tax;
+  const rMonth = pYear/12;
+  let value = start;
+  let paidTotal = start;
+
+  const labels=[], depo=[], netGain=[], taxArr=[];
+  for(let y=1; y<=yrs; y++){
+    for(let m=0; m<12; m++){
+      if(y===lumpY && m===0){ value += lump; }   // Einmalzahlung zu Jahresbeginn
+      value = value*(1+rMonth) + rate;
+    }
+    paidTotal += rate*12 + (y===lumpY ? lump : 0);
+    const grossGain = value - paidTotal;
+    const tax = withTax ? grossGain*taxRate : 0;
+    const net = grossGain - tax;
+
     labels.push('Jahr '+y);
-    dep.push(rate*12 + (y===lumpY?lump:0));
+    depo.push(rate*12 + (y===lumpY ? lump : 0));
     netGain.push(net);
     taxArr.push(tax);
   }
-  const end= value - (withTax?grossTaxTotal(netGain,taxArr):0);
-  headline.textContent=`Endkapital: ${fmt(value)}   Einzahlungen: ${fmt(paid)}   Gewinn: ${fmt(value-paid)}`;
-  drawChart(labels,dep,netGain,taxArr);
-  drawCompare(value,paid,p);}
 
-function grossTaxTotal(net,taxes){let t=0;for(let i=0;i<taxes.length;i++)t+=taxes[i];return t;}
+  const endCap = value;
+  const profit = endCap - paidTotal;
 
-function drawChart(labels,dep,net,tax){ if(chartMain) chartMain.destroy();
-  chartMain=new Chart(document.getElementById('chart').getContext('2d'),{
-    type:'bar',data:{labels,datasets:[
-      {label:'Einzahlung',data:dep,backgroundColor:'rgba(101,115,255,.7)',stack:'all'},
-      {label:'Gewinn (netto)',data:net,backgroundColor:'rgba(46,204,113,.7)',stack:'all'},
-      {label:'Steuer',data:tax,backgroundColor:'rgba(231,76,60,.7)',stack:'all'}]},
-    options:{maintainAspectRatio:false,responsive:true,plugins:{legend:{position:'bottom'}},scales:{y:{beginAtZero:true}}}});} 
+  headline.textContent =
+    `Endkapital: ${fmt(endCap)}   Einzahlungen: ${fmt(paidTotal)}   Gewinn: ${fmt(profit)}`;
 
-function drawCompare(end,paid,p){ if(chartCompare) chartCompare.destroy();
-  const bank0=paid; const tages=paid*Math.pow(1+0.02,document.getElementById('years').value);
-  chartCompare=new Chart(document.getElementById('compare').getContext('2d'),{
-    type:'bar',data:{labels:['ETF','Bank 0 %','Tagesgeld 2 %'],datasets:[{data:[end,bank0,tages],backgroundColor:['rgba(46,204,113,.7)','rgba(149,165,166,.7)','rgba(52,152,219,.7)']}]},
-    options:{maintainAspectRatio:false,responsive:true,plugins:{legend:{display:false}},scales:{y:{beginAtZero:true}}}});} 
+  drawChart(labels,depo,netGain,taxArr);
+  drawCompare(endCap,paidTotal,yrs);
+}
 
-const rateElem=rate,yearsElem=years,interestElem=interest,startElem=start,lumpsumElem=lumpsum,lumpyearElem=lumpyear,warn=document.getElementById('warn');
+function drawChart(labels,depo,net,tax){
+  if(chartMain) chartMain.destroy();
+  chartMain = new Chart(document.getElementById('chart'),{
+    type:'bar',
+    data:{labels,
+      datasets:[
+        {label:'Einzahlung',data:depo,backgroundColor:'rgba(101,115,255,.7)',stack:'s',maxBarThickness:40},
+        {label:'Gewinn (netto)',data:net,backgroundColor:'rgba(46,204,113,.7)',stack:'s',maxBarThickness:40},
+        {label:'Steuer',data:tax,backgroundColor:'rgba(231,76,60,.7)',stack:'s',maxBarThickness:40}
+    ]},
+    options:{
+      maintainAspectRatio:false,responsive:true,
+      plugins:{legend:{position:'bottom',labels:{font:{size:14}}}},
+      scales:{
+        y:{beginAtZero:true,ticks:{stepSize:25000,font:{size:14},
+            callback:v=>v.toLocaleString('de-DE')}},
+        x:{ticks:{font:{size:14}}}
+      }
+    }
+  });
+}
+
+function drawCompare(end,paid,yrs){
+  if(chartCompare) chartCompare.destroy();
+  const bank0 = paid;
+  const tages = paid * Math.pow(1+0.02, yrs);
+
+  chartCompare = new Chart(document.getElementById('compare'),{
+    type:'bar',
+    data:{
+      labels:['ETF','Bank 0 %','Tagesgeld 2 %'],
+      datasets:[{data:[end,bank0,tages],
+        backgroundColor:['rgba(46,204,113,.7)','rgba(149,165,166,.7)','rgba(52,152,219,.7)'],
+        maxBarThickness:40}]
+    },
+    options:{
+      maintainAspectRatio:false,responsive:true,
+      plugins:{legend:{display:false}},
+      scales:{
+        y:{beginAtZero:true,ticks:{stepSize:25000,font:{size:14},
+            callback:v=>v.toLocaleString('de-DE')}},
+        x:{ticks:{font:{size:14}}}
+      }
+    }
+  });
+}
 </script>
 </body>
 </html>
